Adding Payment Service and some refactorings
