# docs/swagger-docker/dist/swagger.json
@@ -18,10 +18,44 @@
   "host" : "localhost:8080",
   "basePath" : "/",
   "tags" : [ {
+    "name" : "Payment Services"
+  }, {
     "name" : "Store Services"
   } ],
   "schemes" : [ "http" ],
   "paths" : {
+    "/api/payment" : {
+      "post" : {
+        "tags" : [ "Payment Services" ],
+        "summary" : "",
+        "description" : "Save payment",
+        "operationId" : "savePayment",
+        "consumes" : [ "application/json" ],
+        "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "in" : "body",
+          "name" : "body",
+          "required" : false,
+          "schema" : {
+            "$ref" : "#/definitions/PaymentDTO"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "successful operation",
+            "schema" : {
+              "$ref" : "#/definitions/Payment"
+            }
+          },
+          "201" : {
+            "description" : "Payment successfully saved",
+            "schema" : {
+              "$ref" : "#/definitions/Payment"
+            }
+          }
+        }
+      }
+    },
     "/api/store" : {
       "get" : {
         "tags" : [ "Store Services" ],
@@ -85,6 +119,103 @@
       "properties" : {
         "error" : {
           "type" : "string"
+        }
+      }
+    },
+    "Order" : {
+      "type" : "object",
+      "properties" : {
+        "id" : {
+          "type" : "integer",
+          "format" : "int64"
+        },
+        "address" : {
+          "type" : "string"
+        },
+        "confirmationDate" : {
+          "type" : "string",
+          "format" : "date-time"
+        },
+        "status" : {
+          "type" : "string",
+          "enum" : [ "PENDING", "AWAITING_PAYMENT", "AWAITING_FULFILLMENT", "AWAITING_SHIPMENT", "AWAITING_PICKUP", "PARTIALLY_SHIPPED", "COMPLETED", "SHIPPED", "CANCELLED", "DECLINED", "REFUNDED", "DISPUTED", "MANUAL_VERIFICACTION_REQUIRED", "PARTIALLY_REFUNDED" ]
+        },
+        "store" : {
+          "$ref" : "#/definitions/Store"
+        },
+        "items" : {
+          "type" : "array",
+          "items" : {
+            "$ref" : "#/definitions/OrderItem"
+          }
+        }
+      }
+    },
+    "OrderItem" : {
+      "type" : "object",
+      "properties" : {
+        "id" : {
+          "type" : "integer",
+          "format" : "int64"
+        },
+        "order" : {
+          "$ref" : "#/definitions/Order"
+        },
+        "description" : {
+          "type" : "string"
+        },
+        "unitPrice" : {
+          "type" : "number",
+          "format" : "float"
+        },
+        "quantity" : {
+          "type" : "integer",
+          "format" : "int32"
+        }
+      }
+    },
+    "Payment" : {
+      "type" : "object",
+      "properties" : {
+        "id" : {
+          "type" : "integer",
+          "format" : "int64"
+        },
+        "status" : {
+          "type" : "string",
+          "enum" : [ "CANCELED_REVERSAL", "COMPLETED", "CREATED", "DENIED", "EXPIRED", "FAILED", "PENDING", "REFUNDED", "REVERSED", "PROCESSED", "VOIDED" ]
+        },
+        "creditCardNumber" : {
+          "type" : "integer",
+          "format" : "int64"
+        },
+        "paymentDate" : {
+          "type" : "string",
+          "format" : "date-time"
+        },
+        "order" : {
+          "$ref" : "#/definitions/Order"
+        }
+      }
+    },
+    "PaymentDTO" : {
+      "type" : "object",
+      "properties" : {
+        "orderId" : {
+          "type" : "integer",
+          "format" : "int64"
+        },
+        "status" : {
+          "type" : "string",
+          "enum" : [ "CANCELED_REVERSAL", "COMPLETED", "CREATED", "DENIED", "EXPIRED", "FAILED", "PENDING", "REFUNDED", "REVERSED", "PROCESSED", "VOIDED" ]
+        },
+        "creditCardNumber" : {
+          "type" : "integer",
+          "format" : "int64"
+        },
+        "paymentDate" : {
+          "type" : "string",
+          "format" : "date-time"
         }
       }
     },
